PONOVO INST. NUXT !!!
Pokusaji sa animacijama, tranzicijama, gsap i css, page i layout, ipak ostavila css. Custom Loader. Promise.all, hendlovanje errora. PROBLEMI SA SMOOTHIES - podaci su tu, ali renderovanje nesto petlja

--- a/assets/sass/abstract/_extends.scss
+++ b/assets/sass/abstract/_extends.scss
@@ -141,3 +141,14 @@
 %box-shadow {
     box-shadow: $box_shadow;
 }
+
+%optimizeProps {
+    will-change: transform;
+    transform: translateZ(0);
+    backface-visibility: hidden;
+}
+%optimizePropsForGsap {
+    @extend %pos-abs;
+    top: 0;
+    left: 0;
+}
