--- a/assets/sass/layouts/_categories.scss
+++ b/assets/sass/layouts/_categories.scss
@@ -1,99 +1,100 @@
 .categories {
-  --category-radius: 3.3rem;
-  @extend %text-center;
-  display: grid;
-  grid-gap: 5rem;
-  color: var(--clr_white);
-
-  @include device(tab) {
-    grid-gap: 1rem;
-  }
-
-  &__title {
-    @extend %fw-600;
-    span {
-      @extend %fw-300;
-    }
-  }
-
-  &__category {
-    background: var(--clr_grd_bg);
-    color: currentColor;
-    border-radius: var(--category-radius);
-    padding: 2.2rem 4rem;
-
+    --category-radius: 3.3rem;
+    @extend %text-center;
     display: grid;
-    place-items: center;
-    grid-gap: 1rem;
+    grid-gap: 5rem;
+    color: var(--clr_white);
 
-    transition: 0.5s;
-    @extend %pos-rel;
-    @extend %cursor;
-    @extend %box-shadow;
+    @include device(tab) {
+        grid-gap: 1rem;
+    }
 
-    height: 16rem;
-    width: 100%;
-    // max-width: 15rem;
-
-    &--active,
-    &:hover,
-    &:focus,
-    &:active {
-      // padding: 3.2rem 4.2rem;
-
-      .categories__icon {
-        transform: translateY(-110%) rotate(90deg) scale(1.3);
-        border-color: var(--clr_bg);
-        svg {
-          transform: rotate(-90deg);
+    &__title {
+        @extend %fw-600;
+        @extend %overflow-hidden;
+        span:nth-of-type(2) {
+            @extend %fw-300;
         }
-      }
-      .categories__name {
-        transform: translateY(-190%);
-      }
-      .categories__counter {
-        transform: translateY(-10%) scale(1);
-        opacity: 1;
-      }
     }
-  }
 
-  &__icon {
-    border: 5px solid transparent;
-    transition: 0.5s;
+    &__category {
+        background: var(--clr_grd_bg);
+        color: currentColor;
+        border-radius: var(--category-radius);
+        padding: 2.2rem 4rem;
 
-    svg {
-      transition: 0.25s;
+        display: grid;
+        place-items: center;
+        grid-gap: 1rem;
+
+        transition: 0.5s;
+        @extend %pos-rel;
+        @extend %cursor;
+        @extend %box-shadow;
+
+        height: 16rem;
+        width: 100%;
+        // max-width: 15rem;
+
+        &--active,
+        &:hover,
+        &:focus,
+        &:active {
+            // padding: 3.2rem 4.2rem;
+
+            .categories__icon {
+                transform: translateY(-110%) rotate(90deg) scale(1.3);
+                border-color: var(--clr_bg);
+                svg {
+                    transform: rotate(-90deg);
+                }
+            }
+            .categories__name {
+                transform: translateY(-190%);
+            }
+            .categories__counter {
+                transform: translateY(-10%) scale(1);
+                opacity: 1;
+            }
+        }
     }
-  }
 
-  &__name {
-    font-size: 1.6rem;
-    font-weight: 500;
-    letter-spacing: 1px;
-    transition: 0.5s;
-    transition-delay: 0.05s;
-  }
+    &__icon {
+        border: 5px solid transparent;
+        transition: 0.5s;
 
-  &__counter {
-    background: var(--clr_white);
-    color: var(--clr_accent_to_dark);
-    font-weight: 700;
-    letter-spacing: 2px;
-    font-size: 1.8rem;
-    width: 70%;
-    padding: 1rem;
-    border-radius: var(--icon-radius);
-    // transform: translateY(10px);
-    transform: translateY(20%) scale(0);
-    transition: 0.5s transform, 0.5s opacity;
-    transition-delay: 0.1s;
-    transform-origin: center bottom;
-    @extend %pos-abs;
-    bottom: 10px;
-    opacity: 0;
-    pointer-events: none;
-  }
+        svg {
+            transition: 0.25s;
+        }
+    }
+
+    &__name {
+        font-size: 1.6rem;
+        font-weight: 500;
+        letter-spacing: 1px;
+        transition: 0.5s;
+        transition-delay: 0.05s;
+    }
+
+    &__counter {
+        background: var(--clr_white);
+        color: var(--clr_accent_to_dark);
+        font-weight: 700;
+        letter-spacing: 2px;
+        font-size: 1.8rem;
+        width: 70%;
+        padding: 1rem;
+        border-radius: var(--icon-radius);
+        // transform: translateY(10px);
+        transform: translateY(20%) scale(0);
+        transition: 0.5s transform, 0.5s opacity;
+        transition-delay: 0.1s;
+        transform-origin: center bottom;
+        @extend %pos-abs;
+        bottom: 10px;
+        opacity: 0;
+        pointer-events: none;
+    }
 }
 
 // .active-cat {
