--- a/assets/sass/base/_global.scss
+++ b/assets/sass/base/_global.scss
@@ -1,117 +1,117 @@
 html,
 body {
-    scroll-behavior: smooth;
-    @extend %w-100;
-    min-height: 100vh;
-    overflow-x: hidden;
+  scroll-behavior: smooth;
+  @extend %w-100;
+  min-height: 100vh;
+  overflow-x: hidden;
 
-    // scrollbar-color: $main transparent;
-    // scrollbar-width: none;
+  // scrollbar-color: $main transparent;
+  // scrollbar-width: none;
 }
 
 body {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
-    background: var(--clr_bg);
-    color: var(--clr_black);
-    @extend %overflow-hidden;
-    @extend %flex-center;
-    transition: colors 0.3s ease, background 0.3s ease;
-    // transition: 0.3s;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  background: var(--clr_bg);
+  color: var(--clr_black);
+  @extend %overflow-hidden;
+  @extend %flex-center;
+  transition: colors 0.3s ease, background 0.3s ease;
+  // transition: 0.3s;
 }
 
 ::-webkit-scrollbar,
 ::-webkit-scrollbar-track {
-    // background: $white;
-    // width: 0.8rem  ;
-    display: none;
+  // background: $white;
+  // width: 0.8rem  ;
+  display: none;
 }
 
 ::-webkit-scrollbar-thumb {
-    // background: $main;
-    // @extend %radius-btn;
+  // background: $main;
+  // @extend %radius-btn;
 }
 
 ::selection {
-    background: var(--clr_accent);
-    color: var(--clr_accent_to_dark);
+  background: var(--clr_accent);
+  color: var(--clr_accent_to_dark);
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 img {
-    filter: var(--filter_img);
+  filter: var(--filter_img);
 }
 
 .bp {
-    font-size: 2rem;
-    padding: 0.3rem 1rem;
-    display: block;
-    @extend %text-center;
-    @extend %pos-fix;
-    bottom: 5%;
-    left: 50%;
-    z-index: 2000;
+  font-size: 2rem;
+  padding: 0.3rem 1rem;
+  display: block;
+  @extend %text-center;
+  @extend %pos-fix;
+  bottom: 5%;
+  left: 50%;
+  z-index: 2000;
 
+  &::before {
+    content: 'desktop ';
+  }
+
+  @include device(tab-land) {
+    // width < 1200 ?
+    background: purple;
     &::before {
-        content: "desktop ";
+      content: 'tab-land';
     }
+  }
+  @include device(tab-mid) {
+    // width < 1050 ?
+    background: darkslategrey;
+    &::before {
+      content: 'tab-mid';
+    }
+  }
 
-    @include device(tab-land) {
-        // width < 1200 ?
-        background: purple;
-        &::before {
-            content: "tab-land";
-        }
+  @include device(tab) {
+    // width < 900 ?
+    background: teal;
+    &::before {
+      content: 'tab';
     }
-    @include device(tab-mid) {
-        // width < 1050 ?
-        background: darkslategrey;
-        &::before {
-            content: "tab-mid";
-        }
-    }
+  }
 
-    @include device(tab) {
-        // width < 900 ?
-        background: teal;
-        &::before {
-            content: "tab";
-        }
+  @include device(phone-land) {
+    // width < 600 ?
+    background: lightgreen;
+    &::before {
+      content: 'phone-land';
     }
+  }
 
-    @include device(phone-land) {
-        // width < 600 ?
-        background: lightgreen;
-        &::before {
-            content: "phone-land";
-        }
+  @include device(phone) {
+    // width < 500 ?
+    background: orangered;
+    &::before {
+      content: 'phone';
     }
+  }
 
-    @include device(phone) {
-        // width < 500 ?
-        background: orangered;
-        &::before {
-            content: "phone";
-        }
+  @include device(phone-ant) {
+    // width < 320 ?
+    background: coral;
+    &::before {
+      content: 'phone-ant';
     }
+  }
 
-    @include device(phone-ant) {
-        // width < 320 ?
-        background: coral;
-        &::before {
-            content: "phone-ant";
-        }
+  @include device(big) {
+    // width > 1920 ?
+    background: red;
+    &::before {
+      content: 'big';
     }
-
-    @include device(big) {
-        // width > 1920 ?
-        background: red;
-        &::before {
-            content: "big";
-        }
-    }
+  }
 }
